# libcomm

./: .gitignore  CMakeLists.txt  README
Modules/: Findcomm.cmake
src/: CMakeLists.txt  Doxyfile.in
src/comm/: CMakeLists.txt  Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  SerialConfiguration.cpp  SerialConfiguration.h  SerialPort.cpp  SerialPort.h  SerialPortWin32.cpp  SerialPortWin32.h  Socket.cpp  Socket.h  SocketConfiguration.cpp  SocketConfiguration.h  TcpSocket.cpp  TcpSocket.h  TcpSocketPosix.cpp  TcpSocketPosix.h  TcpSocketWin32.cpp  TcpSocketWin32.h  UdpSocket.cpp  UdpSocket.h  UdpSocketPosix.cpp  UdpSocketPosix.h  UdpSocketWin32.cpp  UdpSocketWin32.h
